syntax = "proto3";
package ru.leti.wise.task.event;

import "google/protobuf/timestamp.proto";

service StatisticsService{
  rpc getStatistic(StatisticRequest) returns (StatisticResponse) {};
}

message StatisticRequest{
  StatisticType type = 1;
  StatisticScope scope = 2;
  string event_type = 3;
  optional string task_id = 4;
  optional string user_id = 5;
}

message Session{
  string id = 1;
  string user_id = 2;
  string task_id = 3;
}

message StatisticResponse{
  StatisticScope scope = 1;
  StatisticType type = 2;
  google.protobuf.Timestamp update_at = 3;
  optional string task_id = 4;
  optional string user_id = 5;
  double value = 6;
  string event_type = 7;
}

enum StatisticScope {
  USER = 0;
  TASK = 1;
  SESSION = 2;
  GLOBAL = 3;
}

enum StatisticType {
  SUCCESS_RATE = 0;
  SUM = 1;
  MEAN = 2;
}